// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarListItem /> snapshot should match snapshot 1`] = `
<AvatarListItem>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with avatarProps 1`] = `
<AvatarListItem
  avatarProps={
    Object {
      "presence": "active",
      "title": "Cisco",
    }
  }
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                presence="active"
                size={32}
                title="Cisco"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                  <div
                    className="md-avatar-presence-icon-wrapper"
                  >
                    <Icon
                      color="var(--avatar-presence-icon-active)"
                      name="unread"
                      scale={12}
                      weight="filled"
                    >
                      <div
                        className="md-icon-wrapper"
                      >
                        <svg
                          className=""
                          data-autoscale={false}
                          data-scale={12}
                          height="100%"
                          style={
                            Object {
                              "fill": "var(--avatar-presence-icon-active)",
                              "stroke": "var(--avatar-presence-icon-active)",
                            }
                          }
                          viewBox="0, 0, 32, 32"
                          width="100%"
                        />
                      </div>
                    </Icon>
                  </div>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with className 1`] = `
<AvatarListItem
  className="example-class"
>
  <ListItemBase
    className="example-class md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="example-class md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with displayMoreAction 1`] = `
<AvatarListItem
  displayActions={
    Array [
      "more",
    ]
  }
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            >
              <ButtonCircle
                ghost={true}
                size={28}
              >
                <FocusRing>
                  <FocusRing
                    focusClass="md-focus-ring-wrapper children"
                    focusRingClass="md-focus-ring-wrapper children"
                  >
                    <button
                      className="md-button-circle-wrapper"
                      data-color="primary"
                      data-disabled={false}
                      data-ghost={true}
                      data-multiple-children={false}
                      data-outline={false}
                      data-size={28}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      type="button"
                    >
                      <Icon
                        name="more"
                        scale={16}
                        weight="bold"
                      >
                        <div
                          className="md-icon-wrapper"
                        >
                          <svg
                            className=""
                            data-autoscale={false}
                            data-scale={16}
                            fill="currentColor"
                            height="100%"
                            stroke="currentColor"
                            style={Object {}}
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </button>
                  </FocusRing>
                </FocusRing>
              </ButtonCircle>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with displayMuteAction && !isMuted 1`] = `
<AvatarListItem
  displayActions={
    Array [
      "mute",
    ]
  }
  isMuted={false}
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            >
              <ButtonCircle
                ghost={true}
                size={28}
              >
                <FocusRing>
                  <FocusRing
                    focusClass="md-focus-ring-wrapper children"
                    focusRingClass="md-focus-ring-wrapper children"
                  >
                    <button
                      className="md-button-circle-wrapper"
                      data-color="primary"
                      data-disabled={false}
                      data-ghost={true}
                      data-multiple-children={false}
                      data-outline={false}
                      data-size={28}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      type="button"
                    >
                      <Icon
                        fillColor={false}
                        name="audio-microphone-on-green-colored"
                        scale={16}
                        strokeColor="none"
                        weight="bold"
                      >
                        <div
                          className="md-icon-wrapper"
                        >
                          <svg
                            className=""
                            data-autoscale={false}
                            data-scale={16}
                            fill="currentColor"
                            height="100%"
                            style={
                              Object {
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </button>
                  </FocusRing>
                </FocusRing>
              </ButtonCircle>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with displayMuteAction 1`] = `
<AvatarListItem
  displayActions={
    Array [
      "mute",
    ]
  }
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            >
              <ButtonCircle
                ghost={true}
                size={28}
              >
                <FocusRing>
                  <FocusRing
                    focusClass="md-focus-ring-wrapper children"
                    focusRingClass="md-focus-ring-wrapper children"
                  >
                    <button
                      className="md-button-circle-wrapper"
                      data-color="primary"
                      data-disabled={false}
                      data-ghost={true}
                      data-multiple-children={false}
                      data-outline={false}
                      data-size={28}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDragStart={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchCancel={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      type="button"
                    >
                      <Icon
                        fillColor="var(--label-error-text)"
                        name="microphone-muted"
                        scale={16}
                        strokeColor="none"
                        weight="bold"
                      >
                        <div
                          className="md-icon-wrapper"
                        >
                          <svg
                            className=""
                            data-autoscale={false}
                            data-scale={16}
                            height="100%"
                            style={
                              Object {
                                "fill": "var(--label-error-text)",
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </button>
                  </FocusRing>
                </FocusRing>
              </ButtonCircle>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with firstLine 1`] = `
<AvatarListItem
  firstLine="firstLine"
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  >
                    firstLine
                  </p>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with id 1`] = `
<AvatarListItem
  id="example-id"
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    id="example-id"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          id="example-id"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with scheduler state = available 1`] = `
<AvatarListItem
  schedulerState="available"
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--label-success-text)"
                name="scheduler-available"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={16}
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--label-success-text)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with scheduler state = quiet-hours 1`] = `
<AvatarListItem
  schedulerState="quiet-hours"
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--label-secondary-text)"
                name="scheduler-not-working-hours"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={16}
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--label-secondary-text)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with scheduler state = unavailable 1`] = `
<AvatarListItem
  schedulerState="unavailable"
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--label-warning-text)"
                name="scheduler-unavailable"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={16}
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--label-warning-text)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with scheduler state = unknown 1`] = `
<AvatarListItem
  schedulerState="unknown"
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--label-error-text)"
                name="scheduler-unknown"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={16}
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--label-error-text)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with secondLine 1`] = `
<AvatarListItem
  secondLine="secondLine"
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
                <Text
                  type="body-secondary"
                >
                  <small
                    className="md-text-wrapper md-text-color"
                    data-type="body-secondary"
                  >
                    secondLine
                  </small>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;

exports[`<AvatarListItem /> snapshot should match snapshot with style 1`] = `
<AvatarListItem
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ListItemBase
    className="md-avatar-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <li
          className="md-avatar-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          style={
            Object {
              "color": "pink",
            }
          }
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                >
                  <span>
                    C
                  </span>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper md-text-color"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarListItem>
`;
